BASIS-38157 - add entidade perfil

--- a/frontend/src/app/perfil/perfil-detail.component.html
+++ b/frontend/src/app/perfil/perfil-detail.component.html
@@ -5,32 +5,14 @@
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nmPerfil" pInputText [ngModel]="perfil.nmPerfil" readonly/>
-            <label>Nm Perfil</label>
+            <input type="text" name="nomePerfil" pInputText [ngModel]="perfil.nomePerfil" readonly/>
+            <label>Nome Perfil</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="dsPerfil" pInputText [ngModel]="perfil.dsPerfil" readonly/>
             <label>Ds Perfil</label>
-          </span>
-        </div>
-        <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
-              <input type="text" name="stExcluido" pInputText [ngModel]="perfil.stExcluido ? 'Sim' : (perfil.stExcluido != null ? 'Não' : null)" readonly/>
-            <label>St Excluido</label>
-          </span>
-        </div>
-        <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
-              <input type="text" name="stAtivo" pInputText [ngModel]="perfil.stAtivo ? 'Sim' : (perfil.stAtivo != null ? 'Não' : null)" readonly/>
-            <label>St Ativo</label>
-          </span>
-        </div>
-        <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
-            <input type="text" name="idFuncionalidade" pInputText [ngModel]="perfil.idFuncionalidade" readonly/>
-            <label>Id Funcionalidade</label>
           </span>
         </div>
       </div>
