--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -17,26 +17,26 @@
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
+            <input type="text" name="senha" pInputText [ngModel]="usuario.senha" readonly/>
+            <label>Senha</label>
+          </span>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
             <input type="text" name="email" pInputText [ngModel]="usuario.email" readonly/>
             <label>Email</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="perfil" pInputText [ngModel]="usuario.perfil.id" readonly/>
-            <label>Perfil</label>
-          </span>
-        </div>
-        <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
-            <input type="text" name="unidadeDeSaude" pInputText [ngModel]="usuario.unidadeDeSaude" readonly/>
-            <label>Unidade De Saude</label>
-          </span>
-        </div>
-        <div class="ui-g-12 ui-md-6">
-          <span class="md-inputfield">
               <input type="text" name="ativo" pInputText [ngModel]="usuario.ativo ? 'Sim' : (usuario.ativo != null ? 'Não' : null)" readonly/>
             <label>Ativo</label>
+          </span>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="perfil" pInputText [ngModel]="usuario.perfil.nomePerfil" readonly/>
+            <label>Perfil</label>
           </span>
         </div>
       </div>
