--- a/frontend/src/app/tipo-pergunta/tipo-pergunta.component.html
+++ b/frontend/src/app/tipo-pergunta/tipo-pergunta.component.html
@@ -5,25 +5,29 @@
       <div class="ui-g">
         <div class="ui-g-12 ui-md-12">
             <span class="md-inputfield">
-              <input type="text" pInputText class="ui-inputtext" #filter/>
+                <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
+                (keyup.enter)="valueFiltro(elasticQuery.query)" name="filtro"/>
+
               <label>Pesquisar</label>
             </span>
         </div>
-    
         <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(filter.value)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search"  (click)="valueFiltro(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Novo" routerLink="/tipoPergunta/new" icon="ui-icon-add"></button>
           </div>
         </div>
         <div class="ui-g-12 ui-md-3"></div>
-        <basis-datatable [url]="searchUrl" 
-          (buttonClick)="datatableClick($event)" #datatable>
+        <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)"  #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]" >
           <p-column header="Enunciado Pergunta" field="enunciadoPergunta"></p-column>
         </basis-datatable>
+        <div class="ui-g-12 ui-md-2">
+            <app-botoes-exportacao resourceName="precadastro" [query]="valueFiltroCampo">
+            </app-botoes-exportacao>
+        </div>
       </div>
     </div>
   </div>
