BASIS-37211 - Mudança dos nomes dos campos

--- a/frontend/src/app/perfil/perfil-detail.component.html
+++ b/frontend/src/app/perfil/perfil-detail.component.html
@@ -1,3 +1,4 @@
+<!-- Visualizar Perfil -->
 <div class="ui-g ui-fluid" *ngIf="perfil">
   <div class="ui-g-12">
     <div class="card card-w-title">
@@ -6,13 +7,13 @@
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="nomePerfil" pInputText [ngModel]="perfil.nomePerfil" readonly/>
-            <label>Nome Perfil</label>
+            <label>Perfil</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="dsPerfil" pInputText [ngModel]="perfil.dsPerfil" readonly/>
-            <label>Ds Perfil</label>
+            <label>Descrição</label>
           </span>
         </div>
       </div>
