BASIS-37211 - update da tabela Permissões

--- a/frontend/src/app/perfil/perfil.component.html
+++ b/frontend/src/app/perfil/perfil.component.html
@@ -23,6 +23,10 @@
           <p-column header="Perfil" field="nomePerfil"></p-column>
           <p-column header="Descrição" field="dsPerfil"></p-column>
         </basis-datatable>
+        <!-- <div class="ui-g-12 ui-md-2">
+            <app-botoes-exportacao resourceName="Perfis" [query]="valueFiltroCampo">
+            </app-botoes-exportacao>  
+        </div> -->
       </div>
     </div>
   </div>
