--- a/frontend/src/app/perfil/perfil-form.component.html
+++ b/frontend/src/app/perfil/perfil-form.component.html
@@ -38,51 +38,51 @@
               <tbody>
                 <tr>
                   <td>Unidade de Saúde</td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox name="unidadeSaude" binary="true" inputId="pesquisaUS" data-ng-click="ligarEvento(false)"></p-checkbox></td>
+                  <td><p-checkbox name="unidadeSaude" binary="true" inputId="incluirUS"></p-checkbox></td>
+                  <td><p-checkbox name="unidadeSaude" binary="true" inputId="alterarUS"></p-checkbox></td>
+                  <td><p-checkbox name="unidadeSaude" binary="true" inputId="exluirUS"></p-checkbox></td>
+                  <td><p-checkbox name="unidadeSaude" binary="true" inputId="visualizarUS"></p-checkbox></td>
                 </tr>
                 <tr>
                   <td>Usuário</td>
-                 <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox inputId="pesquisaU"></p-checkbox></td>
+                  <td><p-checkbox inputId="incluirU"></p-checkbox></td>
+                  <td><p-checkbox inputId="alterarU"></p-checkbox></td>
+                  <td><p-checkbox inputId="exluirU"></p-checkbox></td>
+                  <td><p-checkbox inputId="visualizarU"></p-checkbox></td>
                 </tr>
                 <tr>
                   <td>Perfis e Permissões</td>
-                  <td><input type="checkbox"/></td>
-                 <td><input type="checkbox"/></td>
-                 <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox inputId="pesquisaPP"></p-checkbox></td>
+                  <td><p-checkbox inputId="incluirPP"></p-checkbox></td>
+                  <td><p-checkbox inputId="alterarPP"></p-checkbox></td>
+                  <td><p-checkbox inputId="exluirPP"></p-checkbox></td>
+                  <td><p-checkbox inputId="visualizarPP"></p-checkbox></td>
                 </tr>
                 <tr>
                   <td>Pré Cadastro</td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox inputId="pesquisaPC"></p-checkbox></td>
+                  <td><p-checkbox inputId="incluirPC"></p-checkbox></td>
+                  <td><p-checkbox inputId="alterarPC"></p-checkbox></td>
+                  <td><p-checkbox inputId="exluirPC"></p-checkbox></td>
+                  <td><p-checkbox inputId="visualizarPC"></p-checkbox></td>
                 </tr>
                 <tr>
                   <td>Triagem</td>
-                 <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox inputId="pesquisaT"></p-checkbox></td>
+                  <td><p-checkbox inputId="incluirT"></p-checkbox></td>
+                  <td><p-checkbox inputId="alterarT"></p-checkbox></td>
+                  <td><p-checkbox inputId="exluirT"></p-checkbox></td>
+                  <td><p-checkbox inputId="visualizarT"></p-checkbox></td>
                 </tr>
                 <tr>
                   <td>Paciente</td>
-                  <td><input type="checkbox"/></td>
-                 <td><input type="checkbox"/></td>
-                 <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
-                  <td><input type="checkbox"/></td>
+                  <td><p-checkbox inputId="pesquisaP"></p-checkbox></td>
+                  <td><p-checkbox inputId="incluirP"></p-checkbox></td>
+                  <td><p-checkbox inputId="alterarP"></p-checkbox></td>
+                  <td><p-checkbox inputId="exluirP"></p-checkbox></td>
+                  <td><p-checkbox inputId="visualizarP"></p-checkbox></td>
                 </tr>
               </tbody>
             </table>
