BASIS-37215 - Cadastro Paciente - Gerando novamente o front e acrecentando 4 campos

--- a/frontend/src/app/paciente/paciente-detail.component.html
+++ b/frontend/src/app/paciente/paciente-detail.component.html
@@ -117,6 +117,30 @@
             <label>Estado</label>
           </span>
         </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="telefonePrincipal" pInputText [ngModel]="paciente.telefonePrincipal" readonly/>
+            <label>Telefone Principal</label>
+          </span>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="telefoneAlternativo" pInputText [ngModel]="paciente.telefoneAlternativo" readonly/>
+            <label>Telefone Alternativo</label>
+          </span>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="emailPrincipal" pInputText [ngModel]="paciente.emailPrincipal" readonly/>
+            <label>Email Principal</label>
+          </span>
+        </div>
+        <div class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="emailAlternativo" pInputText [ngModel]="paciente.emailAlternativo" readonly/>
+            <label>Email Alternativo</label>
+          </span>
+        </div>
       </div>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-2">
