--- a/frontend/src/app/paciente/paciente-detail.component.html
+++ b/frontend/src/app/paciente/paciente-detail.component.html
@@ -36,7 +36,7 @@
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <input type="text" name="prontuario" pInputText [ngModel]="paciente.prontuario" readonly/>
-            <label>Prontuario</label>
+            <label>Prontuário</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
