--- a/frontend/src/app/paciente/paciente.component.html
+++ b/frontend/src/app/paciente/paciente.component.html
@@ -22,17 +22,17 @@
         <div class="ui-g-12 ui-md-3"></div>
 
         <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)"  #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]" >
-          <p-column header="Nome Paciente" field="nomePaciente"></p-column>
-          <p-column header="RG" field="rg"></p-column>
-          <p-column header="CPF" field="cpf"></p-column>
-          <p-column header="Sexo" field="sexo"></p-column>
-          <p-column header="Data de Nascimento" field="dataNascimento">
+          <p-column header="Nome Paciente" field="nomePaciente" [sortable]="true"></p-column>
+          <p-column header="RG" field="rg" [sortable]="true"></p-column>
+          <p-column header="CPF" field="cpf" [sortable]="true"></p-column>
+          <p-column header="Sexo" field="sexo" [sortable]="true"></p-column>
+          <p-column header="Data de Nascimento" field="dataNascimento" [sortable]="true">
             <ng-template let-col let-dataNascimento="rowData" pTemplate="body">
               {{ dataNascimento[col.field]|date:'dd/MM/y' }}
             </ng-template>
           </p-column>
-          <p-column header="CEP" field="cep"></p-column>
-          <p-column header="Prontuário" field="prontuario"></p-column>
+          <p-column header="CEP" field="cep" [sortable]="true"></p-column>
+          <p-column header="Prontuário" field="prontuario" [sortable]="true"></p-column>
         </basis-datatable>
       </div>
     </div>
